--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -145,6 +145,9 @@
   <ItemGroup>
     <ClCompile Include="Tegami.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="StoryboardInputPath.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
