Added colorblack tool; fixed bug where opacity was being set for newly drawn lines and color rects

--- a/Tegami/StrokeAnimation/StrokeAnimation.vbproj
+++ b/Tegami/StrokeAnimation/StrokeAnimation.vbproj
@@ -174,5 +174,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sEsAmEe StReEt.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
