--- a/Tegami/StrokeAnimation/StrokeAnimation.vbproj
+++ b/Tegami/StrokeAnimation/StrokeAnimation.vbproj
@@ -83,7 +83,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Color.vb" />
+    <Compile Include="ColorRectangle.vb" />
     <Compile Include="Frame.vb" />
     <Compile Include="Stroke.vb" />
     <Compile Include="PlayState.vb" />
