--- a/Tegami/Tegami/Tegami.vcxproj.filters
+++ b/Tegami/Tegami/Tegami.vcxproj.filters
@@ -52,5 +52,8 @@
     <ClInclude Include="StrokeManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PoissonGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
