--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -144,21 +144,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="DotGenerator.cpp" />
     <ClCompile Include="PartGen.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Stroke.cpp" />
     <ClCompile Include="StrokeManager.cpp" />
     <ClCompile Include="Tegami.cpp" />
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="StoryboardInputPath.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.hpp" />
+    <ClInclude Include="DotGenerator.hpp" />
+    <ClInclude Include="DotTrajectory.hpp" />
     <ClInclude Include="PartGen.hpp" />
     <ClInclude Include="PoissonGenerator.h" />
     <ClInclude Include="Stroke.hpp" />
     <ClInclude Include="StrokeManager.hpp" />
+    <ClInclude Include="Utility.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
