--- a/Tegami/StrokeAnimation/StrokeAnimation.vbproj
+++ b/Tegami/StrokeAnimation/StrokeAnimation.vbproj
@@ -85,6 +85,8 @@
     </ApplicationDefinition>
     <Compile Include="ColorRectangle.vb" />
     <Compile Include="Frame.vb" />
+    <Compile Include="SimpleColor.vb" />
+    <Compile Include="SimpleRect.vb" />
     <Compile Include="Stroke.vb" />
     <Compile Include="PlayState.vb" />
     <Compile Include="Tool.vb" />
