--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -145,9 +145,13 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DotGenerator.cpp" />
+    <ClCompile Include="Frame.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="PartGen.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Stroke.cpp" />
+    <ClCompile Include="StrokeAnimation.cpp" />
     <ClCompile Include="StrokeManager.cpp" />
     <ClCompile Include="Tegami.cpp" />
     <ClCompile Include="Utility.cpp" />
@@ -157,11 +161,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.hpp" />
+    <ClInclude Include="Frame.hpp" />
+    <ClInclude Include="Rectangle.hpp" />
     <ClInclude Include="DotGenerator.hpp" />
     <ClInclude Include="DotTrajectory.hpp" />
+    <ClInclude Include="Line.hpp" />
     <ClInclude Include="PartGen.hpp" />
     <ClInclude Include="PoissonGenerator.h" />
     <ClInclude Include="Stroke.hpp" />
+    <ClInclude Include="StrokeAnimation.hpp" />
     <ClInclude Include="StrokeManager.hpp" />
     <ClInclude Include="Utility.hpp" />
   </ItemGroup>
