--- a/Tegami/Tegami/Tegami.vcxproj.filters
+++ b/Tegami/Tegami/Tegami.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Frame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpritePool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="StoryboardInputPath.txt">
@@ -92,6 +95,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Frame.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpritePool.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
