--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DotGenerator.cpp" />
+    <ClCompile Include="DotWave.cpp" />
     <ClCompile Include="Frame.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="PartGen.cpp" />
@@ -156,12 +157,14 @@
     <ClCompile Include="StrokeManager.cpp" />
     <ClCompile Include="Tegami.cpp" />
     <ClCompile Include="Utility.cpp" />
+    <ClCompile Include="Wave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="StoryboardInputPath.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.hpp" />
+    <ClInclude Include="DotWave.hpp" />
     <ClInclude Include="Frame.hpp" />
     <ClInclude Include="Rectangle.hpp" />
     <ClInclude Include="DotGenerator.hpp" />
@@ -174,6 +177,7 @@
     <ClInclude Include="StrokeAnimation.hpp" />
     <ClInclude Include="StrokeManager.hpp" />
     <ClInclude Include="Utility.hpp" />
+    <ClInclude Include="Wave.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
