Updated StrokeAnimation path to take from StrokeAnimationInputPath.txt; added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # StoryboardInputPath
+/Tegami/Tegami/StrokeAnimationInputPath.txt
 /Tegami/Tegami/StoryboardInputPath.txt
 
 # Compiled Object files
