Added Effects enum; updated Storyboard cpp to be able to clear out Sprites; committing some random junk from tinyxml, I think these are random logs, if they continue to be committed I'm going to set up an ignore

--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -166,6 +166,7 @@
   <ItemGroup>
     <ClInclude Include="Character.hpp" />
     <ClInclude Include="DotWave.hpp" />
+    <ClInclude Include="Effects.hpp" />
     <ClInclude Include="Frame.hpp" />
     <ClInclude Include="Rectangle.hpp" />
     <ClInclude Include="DotGenerator.hpp" />
