--- a/Tegami/Tegami/Tegami.vcxproj.filters
+++ b/Tegami/Tegami/Tegami.vcxproj.filters
@@ -118,5 +118,8 @@
     <ClInclude Include="Tree.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Effects.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
