Lowered color tool rotation amount; updated StrokeAnimation to start handling double backing of color; finished first draft of coloring and reviewed with Royce

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 /Tegami/Tegami/StrokeAnimationInputPath.txt
 /Tegami/Tegami/StoryboardInputPath.txt
 
+# tinyxml
+*.exp
+*.idb
+*.tlog
+
 # Compiled Object files
 *.slo
 *.lo
