--- a/Tegami/StrokeImage/StrokeImage.vbproj
+++ b/Tegami/StrokeImage/StrokeImage.vbproj
@@ -88,6 +88,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bezier.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
