Added Selection tool; allow point/stroke selection and delete through Selection tool; removed stroke/help menu strips; added hotkeys for radio/check boxes

--- a/Tegami/StrokeImage/StrokeImage.vbproj
+++ b/Tegami/StrokeImage/StrokeImage.vbproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bezier.vb" />
+    <Compile Include="Tool.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
