changes to characater stuff

--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -143,11 +143,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bezier.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DotGenerator.cpp" />
     <ClCompile Include="DotWave.cpp" />
     <ClCompile Include="Frame.cpp" />
     <ClCompile Include="Line.cpp" />
+    <ClCompile Include="Lyrics.cpp" />
     <ClCompile Include="PartGen.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -164,10 +166,12 @@
     <Text Include="StoryboardInputPath.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bezier.hpp" />
     <ClInclude Include="Character.hpp" />
     <ClInclude Include="DotWave.hpp" />
     <ClInclude Include="Effects.hpp" />
     <ClInclude Include="Frame.hpp" />
+    <ClInclude Include="Lyrics.hpp" />
     <ClInclude Include="Rectangle.hpp" />
     <ClInclude Include="DotGenerator.hpp" />
     <ClInclude Include="DotTrajectory.hpp" />
