Hardcoded polygons for Okaerinasai sections; created BoundingRectangle class to make a rectangle that has left, top, right, and bottom sides; colored random dots based on sections

--- a/Tegami/Tegami/Tegami.vcxproj
+++ b/Tegami/Tegami/Tegami.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BoundingRectangle.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DotGenerator.cpp" />
     <ClCompile Include="DotWave.cpp" />
@@ -166,6 +167,7 @@
     <Text Include="StoryboardInputPath.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BoundingRectangle.hpp" />
     <ClInclude Include="Character.hpp" />
     <ClInclude Include="DotWave.hpp" />
     <ClInclude Include="Effects.hpp" />
