--- a/Tegami/Tegami/Tegami.vcxproj.filters
+++ b/Tegami/Tegami/Tegami.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Polygon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BoundingRectangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="StoryboardInputPath.txt">
@@ -132,6 +135,9 @@
     </ClInclude>
     <ClInclude Include="Polygon.hpp">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoundingRectangle.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
