--- a/Tegami/Test/Test.vcxproj
+++ b/Tegami/Test/Test.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{336A2653-5060-4F12-9E7A-8234307A8345}</ProjectGuid>
+    <ProjectGuid>{A908F410-B357-4EB9-90D0-9F5433FC05C3}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Tegami</RootNamespace>
+    <RootNamespace>Test</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -72,7 +72,6 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\OsuukiSB;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -90,12 +89,9 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)OsuukiSB;$(SolutionDir)tinyxml2-master</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)Debug\;$(SolutionDir)Debug-Dll;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>OsuukiSB.lib;tinyxml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -143,48 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BoundingRectangle.cpp" />
-    <ClCompile Include="Character.cpp" />
-    <ClCompile Include="DotGenerator.cpp" />
-    <ClCompile Include="DotWave.cpp" />
-    <ClCompile Include="Frame.cpp" />
-    <ClCompile Include="Line.cpp" />
-    <ClCompile Include="Okaerinasai.cpp" />
-    <ClCompile Include="PartGen.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
-    <ClCompile Include="Source.cpp" />
-    <ClCompile Include="SpritePool.cpp" />
-    <ClCompile Include="Stroke.cpp" />
-    <ClCompile Include="StrokeAnimation.cpp" />
-    <ClCompile Include="StrokeManager.cpp" />
-    <ClCompile Include="Tegami.cpp" />
-    <ClCompile Include="Tree.cpp" />
-    <ClCompile Include="Utility.cpp" />
-    <ClCompile Include="Wave.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="StoryboardInputPath.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="BoundingRectangle.hpp" />
-    <ClInclude Include="Character.hpp" />
-    <ClInclude Include="DotWave.hpp" />
-    <ClInclude Include="Effects.hpp" />
-    <ClInclude Include="Frame.hpp" />
-    <ClInclude Include="Okaerinasai.hpp" />
-    <ClInclude Include="Rectangle.hpp" />
-    <ClInclude Include="DotGenerator.hpp" />
-    <ClInclude Include="DotTrajectory.hpp" />
-    <ClInclude Include="Line.hpp" />
-    <ClInclude Include="PartGen.hpp" />
-    <ClInclude Include="PoissonGenerator.h" />
-    <ClInclude Include="SpritePool.hpp" />
-    <ClInclude Include="Stroke.hpp" />
-    <ClInclude Include="StrokeAnimation.hpp" />
-    <ClInclude Include="StrokeManager.hpp" />
-    <ClInclude Include="Tree.hpp" />
-    <ClInclude Include="Utility.hpp" />
-    <ClInclude Include="Wave.hpp" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
