Updated BoundingRectangle with const; made PNGWrapper around libpng; cleaned up Okaerinasai project and included background image

--- a/Tegami/Tegami/Tegami.vcxproj.filters
+++ b/Tegami/Tegami/Tegami.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="BoundingRectangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PNGWrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="StoryboardInputPath.txt">
@@ -131,6 +134,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="BoundingRectangle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PNGWrapper.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
